ui enhanced by claude

--- a/index.html
+++ b/index.html
@@ -1,54 +1,212 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <title>AQI finder</title>
-    </head>
-    <body>
-        <header>
-            <h1>AQI finder</h1>
-            <button id="search">Search</button>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Check real-time Air Quality Index (AQI) for any city worldwide. Get detailed pollutant data including PM2.5, PM10, CO, NO2, O3, and SO2.">
+    <title>AQI Finder — Real-time Air Quality Index</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="app-container">
+        <!-- Header -->
+        <header class="header">
+            <div class="header-brand">
+                <div class="logo-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2L2 7l10 5 10-5-10-5z" />
+                        <path d="M2 17l10 5 10-5" />
+                        <path d="M2 12l10 5 10-5" />
+                    </svg>
+                </div>
+                <h1>AQI Finder</h1>
+            </div>
+
+            <!-- Search Bar -->
+            <form id="search-form" class="search-form">
+                <input type="text" id="city-input" class="search-input" placeholder="Search any city..."
+                    autocomplete="off" required>
+                <button type="submit" class="btn btn-primary" id="search-btn">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="11" cy="11" r="8" />
+                        <path d="m21 21-4.35-4.35" />
+                    </svg>
+                    Search
+                </button>
+            </form>
         </header>
 
-        <main>
-            <section aria-labelledby="aqi-title">
-                <h2 id="aqi-title">AQI — City Name</h2>
-                <p>Overall AQI: <span id="overall_aqi">—</span></p>
-
-                <div>
-                    <h3>CO</h3>
-                    <pre id="CO">Loading...</pre>
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- AQI Hero Card -->
+            <section id="aqi-hero" class="aqi-hero" aria-labelledby="aqi-title">
+                <div class="aqi-animation-container" id="animation-container">
+                    <div class="floating-particles" id="particles"></div>
                 </div>
 
-                <div>
-                    <h3>NO2</h3>
-                    <pre id="NO2">Loading...</pre>
+                <div class="aqi-header">
+                    <h2 id="aqi-title" class="city-name">Loading...</h2>
+                    <p class="aqi-subtitle">Current Air Quality</p>
                 </div>
 
-                <div>
-                    <h3>O3</h3>
-                    <pre id="O3">Loading...</pre>
+                <div class="aqi-score-container">
+                    <div class="aqi-score" id="aqi-score">
+                        <span class="aqi-value" id="overall_aqi">—</span>
+                        <span class="aqi-label" id="aqi-status">Loading</span>
+                    </div>
                 </div>
 
-                <div>
-                    <h3>PM2.5</h3>
-                    <pre id="PM25">Loading...</pre>
-                </div>
+                <p class="aqi-description" id="aqi-description">Fetching air quality data...</p>
+            </section>
 
-                <div>
-                    <h3>PM10</h3>
-                    <pre id="PM10">Loading...</pre>
-                </div>
+            <!-- Pollutants Grid -->
+            <section class="pollutants-section">
+                <h3 class="section-title">Pollutant Breakdown</h3>
+                <div class="pollutants-grid">
+                    <div class="pollutant-card" id="card-CO">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>CO</h4>
+                        <p class="pollutant-name">Carbon Monoxide</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="CO-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="CO-aqi">—</span>
+                        </div>
+                    </div>
 
-                <div>
-                    <h3>SO2</h3>
-                    <pre id="SO2">Loading...</pre>
+                    <div class="pollutant-card" id="card-NO2">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>NO₂</h4>
+                        <p class="pollutant-name">Nitrogen Dioxide</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="NO2-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="NO2-aqi">—</span>
+                        </div>
+                    </div>
+
+                    <div class="pollutant-card" id="card-O3">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>O₃</h4>
+                        <p class="pollutant-name">Ozone</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="O3-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="O3-aqi">—</span>
+                        </div>
+                    </div>
+
+                    <div class="pollutant-card" id="card-PM25">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>PM2.5</h4>
+                        <p class="pollutant-name">Fine Particles</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="PM25-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="PM25-aqi">—</span>
+                        </div>
+                    </div>
+
+                    <div class="pollutant-card" id="card-PM10">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>PM10</h4>
+                        <p class="pollutant-name">Coarse Particles</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="PM10-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="PM10-aqi">—</span>
+                        </div>
+                    </div>
+
+                    <div class="pollutant-card" id="card-SO2">
+                        <div class="pollutant-icon">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <circle cx="12" cy="12" r="10" />
+                            </svg>
+                        </div>
+                        <h4>SO₂</h4>
+                        <p class="pollutant-name">Sulfur Dioxide</p>
+                        <div class="pollutant-data">
+                            <span class="concentration" id="SO2-conc">—</span>
+                            <span class="unit">μg/m³</span>
+                        </div>
+                        <div class="pollutant-aqi">
+                            AQI: <span id="SO2-aqi">—</span>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
 
-        <script src="script.js"></script>
-    </body>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-content">
+                <p class="footer-text">Built with care by <strong>Tanzeel Ahmad</strong></p>
+                <div class="social-links">
+                    <a href="https://github.com/tanzeel-a" target="_blank" rel="noopener noreferrer" class="social-link"
+                        aria-label="GitHub">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                        </svg>
+                    </a>
+                    <a href="https://x.com/Tanzeel_x" target="_blank" rel="noopener noreferrer" class="social-link"
+                        aria-label="X (Twitter)">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/tanzeel-ahmad-993460212/" target="_blank"
+                        rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
+                        <svg viewBox="0 0 24 24" fill="currentColor">
+                            <path
+                                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
+                        </svg>
+                    </a>
+                </div>
+                <p class="footer-copyright">© 2026 AQI Finder. Data from RapidAPI.</p>
+            </div>
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
